--- a/.env
+++ b/.env
@@ -41,7 +41,7 @@ app.baseURL = 'http://localhost:8080/'
 #--------------------------------------------------------------------
 
 database.default.hostname = localhost
-database.default.database = dbinventaris
+database.default.database = inventaris
 database.default.username = root
 database.default.password = 
 database.default.DBDriver = MySQLi
